--- a/NaimouzaHighSchool/Views/StudentDataReadView.xaml
+++ b/NaimouzaHighSchool/Views/StudentDataReadView.xaml
@@ -66,7 +66,7 @@
                 </Grid.RowDefinitions>
                 <Border Padding="5">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <Button Width="80" Margin="1">Save</Button>
+                        <Button Width="80" Margin="1" Command="{Binding SaveEditCommand, Source={StaticResource dObj}}">Save</Button>
                          <Button Content="Exit" Name="HideEdit" Width="80" Margin="1">
                             <Button.Triggers>
                             <EventTrigger RoutedEvent="Button.Click" SourceName="HideEdit">
